style.css
/* -------------------- Reboot -------------------- */
*, *::before, *::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	color: unset;
}

/* -------------------- /Reboot -------------------- */

/* -------------------- Utilities & Universals -------------------- */

:root {
	--bg-main: hsl(197, 80%, 70%);
	--bg-card: hsl(197, 85%, 95%);
	--read-true: hsl(104, 85%, 90%);
	--read-false: hsl(0, 85%, 90%);

	--fonts-backup: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
	min-height: 100vh;
	display: flex;
	flex-direction: column;

	background-color: var(--bg-main);
	background-image: linear-gradient(var(--bg-main) 40%, hsl(197, 70%, 82%));
	font-family: var(--fonts-backup);
	color: #0c0d2b;
}

button {
	cursor: pointer;
	font-size: 1rem;
	font-weight: bold;
}

.hidden {
	display: none !important;
}


/* -------------------- /Utilities & Universals -------------------- */

/* -------------------- Content -------------------- */
/* -------------------- Header -------------------- */

header {
	display: flex;
	align-items: center;
	justify-content: center;

	margin: 25px 0;
}

/* -------------------- /Header -------------------- */

/* -------------------- Main -------------------- */

main {
	display: flex;
	flex: auto;
	height: 100%;
	flex-direction: column;
	justify-content: space-between;

	margin: 0 2rem 2rem;
}

main>button,
.submit-btn {
    padding: 0.75rem 2rem;
	width: 80%;
	align-self: center;

    font-size: 1.3rem;
    text-transform: uppercase;
    font-weight: bold;
    
	border: none;
    border-radius: 40px;
    color: white;
    background-color: #0e0708;
}

/* -------------------- Card Grid -------------------- */

.grid-container {
	--grid-spacing: 25px;
	
	display: grid;
	align-items: center;
	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
	gap: var(--grid-spacing);
}

.card {
	padding: 10px 15px;

	display: grid;
	grid-template-columns: 10fr 1fr;
	grid-template-rows: repeat(3, max-content);
	grid-auto-flow: column;

	align-items: center;

	border-radius: 6px;
	background-color: var(--bg-card);
	border: 2px solid black;
}

.card .title {
	font-size: 1.3rem;
}

.card .author {
	color: rgb(64, 64, 64);
}

.card .page-count {
	color: grey;
}

.card .remove-btn {
	grid-column: 2;
	text-align: end;
}

.card .read-status {
	grid-row: 3;
}

/* -------------------- /Card Grid -------------------- */
/* -------------------- /Main -------------------- */

/* -------------------- Modal -------------------- */

#modal {
	position: fixed;
	z-index: 1;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;

	display: grid;
	place-content: center;

	background-color: rgba(0, 0, 0, 0.4);
}

form {
	display: flex;
	flex-direction: column;
	align-items: stretch;
	gap: 2rem;
	z-index: 1;

	align-self: center;
	margin: 10px;
	padding: 1rem;
	
	background-color: hsl(240, 67%, 98%);
	border: 2px solid black;
	box-shadow: 0 0 5px hsl(240, 67%, 24%);
}

.form-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

form span[aria-label="required"] {
	color: red;
}

.form-row {
	width: 100%;
	max-width: 700px;
	
	display: flex;
	flex-wrap: wrap;
	gap: 1rem;
}

.form-item {
	flex: auto;
	width: 200px;
	display: flex;
	flex-direction: column;
	gap: 2px;
}

.form-item label {
	width: 100%;

	text-transform: uppercase;
	color: hsl(240, 67%, 24%);
	font-size: .8rem;
	letter-spacing: 1px;
	font-weight: bold;
}

.form-item label[for="read-status"] {
	display: flex;
	margin-top: 10px;
}

.form-item input {
	width: 100%;
	appearance: none;
	-webkit-appearance: none;
	padding: 6px 10px;
	
	font-size: 0.9rem;
	border: 1px solid lightgrey;
	border-radius: 5px;
}

.form-item input[type="checkbox"] {
	margin: 0 20px;
	--checkbox-dimensions: 1rem;
	width: var(--checkbox-dimensions);
	height: var(--checkbox-dimensions);
	appearance: auto;
	-webkit-appearance: auto;
}

form button.close-form-btn {
	padding: 7px 10px;
	
	color: hsl(240, 67%, 24%);
	background-color: hsl(240, 20%, 94%);
	border: 1px solid hsl(240, 30%, 70%);
	border-radius: 5px;
}

form button.close-form-btn:hover {
	background-color: hsl(240, 40%, 90%);
}

form button.close-form-btn:active {
	background-color: hsl(240, 20%, 100%);
}

/* -------------------- /Modal -------------------- */
/* -------------------- /Content -------------------- */

